--- a/client/src/app/shared/components/delete-one-message/delete-one-message.component.html
+++ b/client/src/app/shared/components/delete-one-message/delete-one-message.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop"></div>
+<div class="backdrop  invert-{{session.invert}}"></div>
 
 <div class="tablo_msg">
     <p class="tc vtablo" [appEasyLang]="session">Хотите удалить сообщение?</p>
