--- a/client/src/app/shared/components/record-audio/record-audio.component.html
+++ b/client/src/app/shared/components/record-audio/record-audio.component.html
@@ -1,5 +1,5 @@
 
-<div class="backdrop"></div>
+<div class="backdrop  invert-{{session.invert}}"></div>
 
 <div class="tablo">
     <p class="tc vtablo" *ngIf="recording" [appEasyLang]="session">Говорите...</p>
