--- a/client/src/app/group-page/event-in-group-form/event-in-group-form.component.html
+++ b/client/src/app/group-page/event-in-group-form/event-in-group-form.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop"></div>
+<div class="backdrop  invert-{{session.invert}}"></div>
 
 <div class="tablo_uv">
     <p class="tc vtablo" [appEasyLang]="session">Описание</p>
