--- a/client/src/app/shared/components/delete-all-message/delete-all-message.component.html
+++ b/client/src/app/shared/components/delete-all-message/delete-all-message.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop"></div>
+<div class="backdrop  invert-{{session.invert}}"></div>
 
 <div class="tablo">
     <p class="tc vtablo" [appEasyLang]="session">Хотите удалить {{event ? 'мероприятие' : 'чат'}}?</p>
