--- a/client/src/app/shared/components/delete-picture/delete-picture.component.html
+++ b/client/src/app/shared/components/delete-picture/delete-picture.component.html
@@ -1,4 +1,4 @@
-<div class="backdrop"></div>
+<div class="backdrop  invert-{{session.invert}}"></div>
 
 <div class="tablo_pict">
     <p class="tc vtablo" [appEasyLang]="session">Хотите удалить файл?</p>
