--- a/client/src/app/games/game-layout/game-layout.component.css
+++ b/client/src/app/games/game-layout/game-layout.component.css
@@ -14,11 +14,11 @@
     border-radius: 10px;
     border-width: 3px;
     border-style: solid;
-    padding: 20px;
-    margin: auto;
-    margin-top: 5vh;
+    left: 10vw;
+    top: 5vh;
     width: 80vw;
-    height: 80vh;
+    height: 90vh;
     background: #fff;
     overflow: auto;
+    position: absolute;
 }
