--- a/client/src/app/pictures-page/pictures-form/pictures-form.component.html
+++ b/client/src/app/pictures-page/pictures-form/pictures-form.component.html
@@ -154,8 +154,7 @@ class="dark-{{session.firstColor}}-border"
 
     <a 
     class="nav-admin form_picture_button middle-{{session.firstColor}}-bg-hover" 
-    [routerLink]="['/manage/pictures', folder]"
-    [queryParams]="{'answersFolder': queryF}">Назад</a>
+    [routerLink]="['/manage/pictures', folder]">Назад</a>
 
     <button id="submit_button" type="submit" hidden></button>
     <label 
