--- a/client/src/app/users-page/users-page.component.html
+++ b/client/src/app/users-page/users-page.component.html
@@ -11,7 +11,7 @@
 
         <div *ngIf="session.levelStatus == 1">
             <p class="in_user_filtr dark-{{session.firstColor}}-color">Организация:</p>
-            <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution">
+            <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution" style="max-width: 200px;">
                 <option value="all">Любое</option>
                 <option *ngFor="let institution of institutions" value="{{institution._id}}">{{institution.name}}</option>
             </select>
