--- a/client/src/app/users-page/users-page.component.html
+++ b/client/src/app/users-page/users-page.component.html
@@ -45,7 +45,7 @@
                 class="avatarAdmin invert-{{session.invert}}" 
                 *ngIf="user.photo"
                 [src]="user.photo">
-                <div class="div_user_info">
+                <div class="div_user_info" style="width: 399px;">
                     <p class="user_info">
                         <span class="dark-{{session.firstColor}}-color">Логин:</span> {{user.login}}
                     </p>
