--- a/client/src/app/games/rating/rating.component.html
+++ b/client/src/app/games/rating/rating.component.html
@@ -26,7 +26,7 @@
         <div class="inline-block">
             <div class="pNotAdmin" [appEasyLang]="session">{{user.name}} {{session.surnameView ? user.surname : ''}}</div>
         </div> <br>
-        <div class="inline-block">
+        <div class="inline-block" style="max-width: 90%;">
             <div class="pNotAdmin" [appEasyLang]="session">{{user.institutionName}}</div>
         </div>
         
