--- a/client/src/app/admin-events-page/admin-events-page.component.html
+++ b/client/src/app/admin-events-page/admin-events-page.component.html
@@ -2,7 +2,7 @@
 <div class="user_filtr" *ngIf="session">
     <div *ngIf="session.levelStatus == 1">
         <p class="in_user_filtr dark-{{session.firstColor}}-color">Организация:</p>
-        <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution" (change)="onFilter()">
+        <select *ngIf="institutions$ | async as institutions" [(ngModel)]="institution" (change)="onFilter()" style="max-width: 200px;">
             <option  value="">Любое</option>
             <option *ngFor="let institution of institutions" value="{{institution._id}}">{{institution.name}}</option>
         </select>
