--- a/client/src/app/analytics/analytics.component.html
+++ b/client/src/app/analytics/analytics.component.html
@@ -22,7 +22,7 @@
             <span
             class="new_user_button form_picture_button middle-{{session.firstColor}}-bg-hover"
             (click)="startUsers()">
-                Общая статискика по пользователям
+                Общая статистика по пользователям
             </span>
             <span
             class="new_user_button form_picture_button middle-{{session.firstColor}}-bg-hover"
