--- a/client/src/app/registr-page/registr-page.component.css
+++ b/client/src/app/registr-page/registr-page.component.css
@@ -40,16 +40,29 @@ label.radio {
 .checked{
     outline: 3px black solid;
 }
-.yes {
+.boy {
     height: 6vw;
     width: 6vw;
     background: url('/images/boy.png');
     background-size: 100% 100%;
 }
-.no {
+.girl {
     height: 6vw;
     width: 6vw;
     background: url('/images/girl.png');
+    background-size: 100% 100%;
+}
+
+.yes {
+    height: 6vw;
+    width: 6vw;
+    background: url('/images/tick.png');
+    background-size: 100% 100%;
+}
+.no {
+    height: 6vw;
+    width: 6vw;
+    background: url('/images/cross.png');
     background-size: 100% 100%;
 }
 
