--- a/client/src/app/registr-page/registr-page.component.html
+++ b/client/src/app/registr-page/registr-page.component.html
@@ -62,6 +62,7 @@
         </select>
 
         <p class="entrance tc notadmin" [appEasyLang]="{easyLang: true}">Согласие на обработку персональных данных:</p>
+        <a href="https://centervnl.ru/policy" target="_blank">Ознакомиться</a><br><br>
         <label class="radio" [ngClass]="{checked: form.value.policy == false}">
             <input name="policy" type="radio" [value]="false" formControlName="policy" hidden> 
             <div class="no green-cursor"></div> 
