--- a/client/src/app/photolikes-page/photolikes-page.component.html
+++ b/client/src/app/photolikes-page/photolikes-page.component.html
@@ -43,7 +43,7 @@
             <img *ngIf="(event.likes && !event.likes.includes(session._id) || !event.likes)" 
             class="like green-cursor" src="/images/notlike.png" (click)="pushLike(event._id)">
 
-            <div class="pNotAdmin countlike green-cursor" (click)="openLikes(event._id)" *ngIf="event.likes.length">{{event.likes.length}}</div>
+            <div class="pNotAdmin countlike green-cursor" (click)="openLikes(event._id)" *ngIf="event.likes && event.likes.length">{{event.likes.length}}</div>
             
         </div>
     </div>
