--- a/client/src/app/users-page/users-form/users-form.component.html
+++ b/client/src/app/users-page/users-form/users-form.component.html
@@ -128,9 +128,9 @@
     <input name="games" type="radio" value="true" formControlName="games"> Да <br>
     <input name="games" type="radio" value="false" formControlName="games"> Нет <br>
 
-    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли страница "Видеокомнаты" (тестовый функционал):</p>
-    <input name="videorooms" type="radio" value="true" formControlName="videorooms"> Да <br>
-    <input name="videorooms" type="radio" value="false" formControlName="videorooms"> Нет <br>
+    <p class="in_new_user dark-{{session.firstColor}}-color">Доступна ли страница "Видеокомнаты" (тестовый функционал, временно недоступен):</p>
+    <input name="videorooms" type="radio" value="true" formControlName="videorooms" disabled> Да <br>
+    <input name="videorooms" type="radio" value="false" formControlName="videorooms" disabled> Нет <br>
 
     <p class="in_new_user dark-{{session.firstColor}}-color">Может ли пользователь менять настройки:</p>
     <input name="setting" type="radio" value="2" formControlName="setting"> Может полностью <br>
